--- a/prgrm.html
+++ b/prgrm.html
@@ -48,5 +48,14 @@ margin-bottom:30px;
 <label for="phone class="form-label">phone
 </div>
 </div>
+     <div class="mb-3">
+     <label for="event"
+     class="form-label">select event</label>label>
+     <select class="form-select' id="event' requierd>
+          <option value="event1">CCNA<option>
+          <option value="event2">workshop</option>
+          <option value="event3">CRT</option
+          </option>
+     
 
 
