--- a/prgrm.html
+++ b/prgrm.html
@@ -54,8 +54,48 @@ margin-bottom:30px;
      <select class="form-select' id="event' requierd>
           <option value="event1">CCNA<option>
           <option value="event2">workshop</option>
-          <option value="event3">CRT</option
-          </option>
-     
+          <option value="event3">CRT</option>
+          <option value="event4">CRT</option>
+     </select>
+     < div class ="invalid-feeedback">
+          select any event from the list
+     </div>
+     </div>
+      <div class="mb-3 from -check">
+           <input type="checkbox"
+                class="form-check-input"
+                id="terms" required>
+           <label class="form-check-label">
+                for="terms>/agree to the terms and conditions</label>label>
+           <div class="invalid-feedback">you must agree to the terms and conditions
+           </div>
+      </div>
+      <button type="submit"
+     class="btn btn-custom w-100">register</button>
+ </form>
+ </div> 
+</div>   
+<!--Bootstrap js&popper.js-->
+      script src ="https://cdn.jsdeliver.net/npm/bootstrap@5.3.0-alpha/
+      dist/js/bootstrap.bundle.min.js".</script>
+<script>
+function(){
+    'use strict'
+var forms=document.queryselectionAll('need-validation')
+     array.protype.slice.call(forms)
+     .forEach(function form)
+     {
+          form.addEventListener('submit',function(event){
+               if(!form.checkValidity())
+               {
+                 event.preventDefault()
+                 event.stopPropagation()
+               }
+               form.classList.add('was-validadted')
+          },false)
+     }}()
+     </script>
+ </body>
+ </html>
 
 
